--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+
+    rebase 变基操作
     <router-view></router-view>
   </body>
 </html>
