--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- built files will be auto injected -->
 
 
-   merge pushed
+   rebase
+   
     <router-view></router-view>
   </body>
 </html>
