--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- built files will be auto injected -->
 
 
-   merge1
+   merge1fakjflajlgjlghkal
     <router-view></router-view>
   </body>
 </html>
